Fix More Info spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -357,8 +357,9 @@ body.works-show {
   }
   
   section.moreInfo {
-    margin-left: 244px;
+    margin-left: 269px;
     margin-top: 10px;
+    padding-right: 1em;
     width: 540px;
     height: 540px;
     overflow: auto;
